docs/en/4.0.0/api/Log.md
#Log
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;9</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mcleanLogFile" data-target="cMethodcleanLogFile" class="autouncollapse">cleanLogFile</a></li><li><a href="#merror" data-target="cMethoderror" class="autouncollapse">error</a></li><li><a href="#mfatalError" data-target="cMethodfatalError" class="autouncollapse">fatalError</a></li><li><a href="#minfo" data-target="cMethodinfo" class="autouncollapse">info</a></li><li><a href="#mreadLogFile" data-target="cMethodreadLogFile" class="autouncollapse">readLogFile</a></li><li><a href="#msendLogFile" data-target="cMethodsendLogFile" class="autouncollapse">sendLogFile</a></li><li><a href="#mshowLog" data-target="cMethodshowLog" class="autouncollapse">showLog</a></li><li><a href="#mtrace" data-target="cMethodtrace" class="autouncollapse">trace</a></li><li><a href="#mwarning" data-target="cMethodwarning" class="autouncollapse">warning</a></li></li></ul></div><div class="btn-group"><a href="#Properties" class="btn"><i class="icon-list"></i> Properties<sup>&nbsp;11</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Class Properties</i></b></a><li><a href="#pdestination" data-target="cPropertydestination" class="autouncollapse">destination</a></li><li><a href="#pdestinationURI" data-target="cPropertydestinationURI" class="autouncollapse">destinationURI</a></li><li><a href="#pexcludeCategories" data-target="cPropertyexcludeCategories" class="autouncollapse">excludeCategories</a></li><li><a href="#pexcludeFilter" data-target="cPropertyexcludeFilter" class="autouncollapse">excludeFilter</a></li><li><a href="#pfilePath" data-target="cPropertyfilePath" class="autouncollapse">filePath</a></li><li><a href="#pfileSize" data-target="cPropertyfileSize" class="autouncollapse">fileSize</a></li><li><a href="#pincludeCategories" data-target="cPropertyincludeCategories" class="autouncollapse">includeCategories</a></li><li><a href="#plevel" data-target="cPropertylevel" class="autouncollapse">level</a></li><li><a href="#pmemoryPeriod" data-target="cPropertymemoryPeriod" class="autouncollapse">memoryPeriod</a></li><li><a href="#pnetTrace" data-target="cPropertynetTrace" class="autouncollapse">netTrace</a></li><li><a href="#pskipPost" data-target="cPropertyskipPost" class="autouncollapse">skipPost</a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;5</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Show log file</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Read log file content</a></li><li><a href="#e2" data-target="eExample2" class="autouncollapse">Clean log file</a></li><li><a href="#e3" data-target="eExample3" class="autouncollapse">Logging categories</a></li><li><a href="#e4" data-target="eExample4" class="autouncollapse">Memory Usage</a></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">JavaScript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p> Use this API to control the behavior of the RhoMobile Log API as well as access it.</p>
<p> This API gives access to Rhodes Logging functionality. There are five functions to add messages to the log with different severity (from lowest to highest) : trace, info, warning, error and fatal. Each of those functions gets two parameters: message and category. Category is an user defined group that helps with used  searching and filtering.</p>

<p>Accessing Log File:
sendLogFile: will sent all the log to server
showLog: brings up popup with log,
readLogFile: returns the full log file,
cleanLogFile: removes all logged messages</p>

<p>Filtering:</p>

<ul>
<li><p>Using level property: It limits minimal severity of messages that will be added to log. For example: setting log level to 2 (warning) will filter out messages generated by trace and info.</p></li>
<li><p>Categories: user defined groups that are used to select messages from different modules for ease of use. There are two main filters: includeCategories and excludeCategories. They are both active at the same time. includeCategories allows to select groups/categories that should be in the log (setting this property to empty will turn disable logging). excludeCategories is used for filtering out some of categories.</p></li>
<li><p>excludeFilter, this filter is used to remove all sensitive information like passwords, security tokens from log.</p></li>
</ul>


<p>Log destinations (any combinations of them):</p>

<ul>
<li>debug console (stdio),</li>
<li>device filesystem (file)</li>
<li>remote sever (url)</li>
</ul>


<h2>Enabling the API</h2>

<p>This API is part of the <code>coreapi</code> extension that is included automatically.</p>

<pre><code>:::ruby
extensions: ["coreapi"]
</code></pre>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mcleanLogFile'/><div class=' method  js ruby android ios wp8' id='mcleanLogFile'><h3><strong  >cleanLogFile</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mcleanLogFile1" data-toggle="tab">Description</a></li><li ><a href="#mcleanLogFile4" data-toggle="tab">Return</a></li><li ><a href="#mcleanLogFile6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-cleanLogFile'><div class="tab-pane fade active in" id="mcleanLogFile1"><p>Clean log file, all logged messages will be removed.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mcleanLogFile2"></div><div class="tab-pane fade" id="mcleanLogFile3"></div><div class="tab-pane fade" id="mcleanLogFile4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mcleanLogFile6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.cleanLogFile()</code> </li><li>Ruby: <code>Rho::Log.cleanLogFile()</code></li></ul></li></ul></div></div></div>  </div><a name ='merror'/><div class=' method  js ruby android ios wp8' id='merror'><h3><strong  >error</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#merror1" data-toggle="tab">Description</a></li><li ><a href="#merror2" data-toggle="tab">Parameters</a></li><li ><a href="#merror4" data-toggle="tab">Return</a></li><li ><a href="#merror6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-error'><div class="tab-pane fade active in" id="merror1"><p>Log message at the Error level.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="merror2"><div><p><strong>Parameters</strong></p><ul><li>message : <span class='text-info'>STRING</span><p>Log message. </p></li><li>category : <span class='text-info'>STRING</span><span class='label '> Default: APP</span><p>Log category. </p></li></ul></div></div><div class="tab-pane fade" id="merror3"></div><div class="tab-pane fade" id="merror4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="merror6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.error(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</code> </li><li>Ruby: <code>Rho::Log.error(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</code></li></ul></li></ul></div></div></div>  </div><a name ='mfatalError'/><div class=' method  js ruby android ios wp8' id='mfatalError'><h3><strong  >fatalError</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mfatalError1" data-toggle="tab">Description</a></li><li ><a href="#mfatalError2" data-toggle="tab">Parameters</a></li><li ><a href="#mfatalError4" data-toggle="tab">Return</a></li><li ><a href="#mfatalError6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-fatalError'><div class="tab-pane fade active in" id="mfatalError1"><p>Log message at the FatalError level. Application will be terminated (on all platforms except iOS)</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mfatalError2"><div><p><strong>Parameters</strong></p><ul><li>message : <span class='text-info'>STRING</span><p>Log message. </p></li><li>category : <span class='text-info'>STRING</span><span class='label '> Default: APP</span><p>Log category. </p></li></ul></div></div><div class="tab-pane fade" id="mfatalError3"></div><div class="tab-pane fade" id="mfatalError4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mfatalError6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.fatalError(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</code> </li><li>Ruby: <code>Rho::Log.fatalError(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</code></li></ul></li></ul></div></div></div>  </div><a name ='minfo'/><div class=' method  js ruby android ios wp8' id='minfo'><h3><strong  >info</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#minfo1" data-toggle="tab">Description</a></li><li ><a href="#minfo2" data-toggle="tab">Parameters</a></li><li ><a href="#minfo4" data-toggle="tab">Return</a></li><li ><a href="#minfo6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-info'><div class="tab-pane fade active in" id="minfo1"><p>Log message at the Info level.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="minfo2"><div><p><strong>Parameters</strong></p><ul><li>message : <span class='text-info'>STRING</span><p>Log message. </p></li><li>category : <span class='text-info'>STRING</span><span class='label '> Default: APP</span><p>Log category. </p></li></ul></div></div><div class="tab-pane fade" id="minfo3"></div><div class="tab-pane fade" id="minfo4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="minfo6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.info(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</code> </li><li>Ruby: <code>Rho::Log.info(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</code></li></ul></li></ul></div></div></div>  </div><a name ='mreadLogFile'/><div class=' method  js ruby android ios wp8' id='mreadLogFile'><h3><strong  >readLogFile</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">INTEGER</span> limit)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mreadLogFile1" data-toggle="tab">Description</a></li><li ><a href="#mreadLogFile2" data-toggle="tab">Parameters</a></li><li ><a href="#mreadLogFile4" data-toggle="tab">Return</a></li><li ><a href="#mreadLogFile6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-readLogFile'><div class="tab-pane fade active in" id="mreadLogFile1"><p>Read log file. Returns string from the log file containing specified number of symbols.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mreadLogFile2"><div><p><strong>Parameters</strong></p><ul><li>limit : <span class='text-info'>INTEGER</span><p>Maximum size of the resulting string in symbols. </p></li></ul></div></div><div class="tab-pane fade" id="mreadLogFile3"></div><div class="tab-pane fade" id="mreadLogFile4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING</li></ul></div></div><div class="tab-pane fade" id="mreadLogFile6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.readLogFile(<span class="text-info">INTEGER</span> limit)</code> </li><li>Ruby: <code>Rho::Log.readLogFile(<span class="text-info">INTEGER</span> limit)</code></li></ul></li></ul></div></div></div>  </div><a name ='msendLogFile'/><div class=' method  js ruby android ios wp8' id='msendLogFile'><h3><strong  >sendLogFile</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msendLogFile1" data-toggle="tab">Description</a></li><li ><a href="#msendLogFile2" data-toggle="tab">Parameters</a></li><li ><a href="#msendLogFile4" data-toggle="tab">Return</a></li><li ><a href="#msendLogFile6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-sendLogFile'><div class="tab-pane fade active in" id="msendLogFile1"><p>Send log file to destinationURI property. Please note that this procedure is blocking and will stop any logging while log file is being send.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="msendLogFile2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="msendLogFile3"></div><div class="tab-pane fade" id="msendLogFile4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="msendLogFile6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.sendLogFile(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Log.sendLogFile(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mshowLog'/><div class=' method  js ruby android ios' id='mshowLog'><h3><strong  >showLog</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mshowLog1" data-toggle="tab">Description</a></li><li ><a href="#mshowLog4" data-toggle="tab">Return</a></li><li ><a href="#mshowLog6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-showLog'><div class="tab-pane fade active in" id="mshowLog1"><p>Display Log view window.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mshowLog2"></div><div class="tab-pane fade" id="mshowLog3"></div><div class="tab-pane fade" id="mshowLog4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mshowLog6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.showLog()</code> </li><li>Ruby: <code>Rho::Log.showLog()</code></li></ul></li></ul></div></div></div>  </div><a name ='mtrace'/><div class=' method  js ruby android ios wp8' id='mtrace'><h3><strong  >trace</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mtrace1" data-toggle="tab">Description</a></li><li ><a href="#mtrace2" data-toggle="tab">Parameters</a></li><li ><a href="#mtrace4" data-toggle="tab">Return</a></li><li ><a href="#mtrace6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-trace'><div class="tab-pane fade active in" id="mtrace1"><p>Log message at the Trace level. By default trace messages are not shown in log (if level equals to 1)</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mtrace2"><div><p><strong>Parameters</strong></p><ul><li>message : <span class='text-info'>STRING</span><p>Log message. </p></li><li>category : <span class='text-info'>STRING</span><span class='label '> Default: APP</span><p>Log category. </p></li></ul></div></div><div class="tab-pane fade" id="mtrace3"></div><div class="tab-pane fade" id="mtrace4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mtrace6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.trace(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</code> </li><li>Ruby: <code>Rho::Log.trace(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</code></li></ul></li></ul></div></div></div>  </div><a name ='mwarning'/><div class=' method  js ruby android ios wp8' id='mwarning'><h3><strong  >warning</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mwarning1" data-toggle="tab">Description</a></li><li ><a href="#mwarning2" data-toggle="tab">Parameters</a></li><li ><a href="#mwarning4" data-toggle="tab">Return</a></li><li ><a href="#mwarning6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-warning'><div class="tab-pane fade active in" id="mwarning1"><p>Log message at the Warning level.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mwarning2"><div><p><strong>Parameters</strong></p><ul><li>message : <span class='text-info'>STRING</span><p>Log message. </p></li><li>category : <span class='text-info'>STRING</span><span class='label '> Default: APP</span><p>Log category. </p></li></ul></div></div><div class="tab-pane fade" id="mwarning3"></div><div class="tab-pane fade" id="mwarning4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mwarning6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.warning(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</code> </li><li>Ruby: <code>Rho::Log.warning(<span class="text-info">STRING</span> message, <span class="text-info">STRING</span> category)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2><i class='icon-list'></i>Properties</h2>

<a name='pdestination'></a><div class=' method  js ruby android ios wp8' id='pdestination'><h3><strong  >destination</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>ARRAY</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pdestination1" data-toggle="tab">Description</a></li><li ><a href="#pdestination5" data-toggle="tab">Values</a></li><li ><a href="#pdestination6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-destination'><div class="tab-pane fade active in" id="pdestination1">List of log destinations that are being used. Destination could be set to empty (disable all logging), "file" - log just into file specified in (filePath), "stdio" - log into debug debug console, "uri" - send log to the server. Logging to several destinations could be set by setting destination to comma separated list in any order (for example "stdio,file"). By default logging to console can be enabled from rhoconfig.txt (LogToOutput = 1). After Rhodes initialization logging to file is enabled automatically.<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pdestination2"></div><div class="tab-pane fade" id="pdestination5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>Log.DEST_FILE - (file)</dt><dd>Log is written to a local file on the device (typically rholog.txt)</dt><dt>Log.DEST_OUTPUT - (stdio)</dt><dd>Log is written to the standard output (ex: Android ADB)</dt><dt>Log.DEST_URI - (uri)</dt><dd>Log is written to a remote logger</dt></dl></div><div class="tab-pane fade" id="pdestination6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.destination</code> </li><li>Ruby: <code>Rho::Log.destination</code></li></ul></li></ul></div></div></div>  </div><a name='pdestinationURI'></a><div class=' method  js ruby android ios wp8' id='pdestinationURI'><h3><strong  >destinationURI</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pdestinationURI1" data-toggle="tab">Description</a></li><li ><a href="#pdestinationURI6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-destinationURI'><div class="tab-pane fade active in" id="pdestinationURI1">Log server URI where log will be posted by using Rho::Log.sendLogFile or from the log view. Log server source code is open and available at http://github.com/rhomobile/rhologs, so you can deploy your own logserver. URI format: 'http://host:port[/path][?log_name=appName]'. Default value is set in rhoconfig.txt (logserver)<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pdestinationURI2"></div><div class="tab-pane fade" id="pdestinationURI5"></div><div class="tab-pane fade" id="pdestinationURI6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.destinationURI</code> </li><li>Ruby: <code>Rho::Log.destinationURI</code></li></ul></li></ul></div></div></div>  </div><a name='pexcludeCategories'></a><div class=' method  js ruby android ios wp8' id='pexcludeCategories'><h3><strong  >excludeCategories</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pexcludeCategories1" data-toggle="tab">Description</a></li><li ><a href="#pexcludeCategories6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-excludeCategories'><div class="tab-pane fade active in" id="pexcludeCategories1">Comma-separated list of excluded log categories. Set to '' (empty) to allow all messages to be logged. Set to concrete value to filter out log from those categories. Default value is '' (empty), it is set in rhoconfig.txt (ExcludeLogCategories)<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pexcludeCategories2"></div><div class="tab-pane fade" id="pexcludeCategories5"></div><div class="tab-pane fade" id="pexcludeCategories6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.excludeCategories</code> </li><li>Ruby: <code>Rho::Log.excludeCategories</code></li></ul></li></ul></div></div></div>  </div><a name='pexcludeFilter'></a><div class=' method  js ruby android ios wp8' id='pexcludeFilter'><h3><strong  >excludeFilter</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pexcludeFilter1" data-toggle="tab">Description</a></li><li ><a href="#pexcludeFilter6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-excludeFilter'><div class="tab-pane fade active in" id="pexcludeFilter1">Define exclude parameters log filter(for security reasons) - parameter names separated by comma. It works when user tries to put in log string containing json/urls. Default value is "" (empty). For example, if user set excludeFilter="password", then trys to put in log this string: "{"user":"alex","password":"abcdef","sessionid":123456}", "abcdef" will not appear in log.<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pexcludeFilter2"></div><div class="tab-pane fade" id="pexcludeFilter5"></div><div class="tab-pane fade" id="pexcludeFilter6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.excludeFilter</code> </li><li>Ruby: <code>Rho::Log.excludeFilter</code></li></ul></li></ul></div></div></div>  </div><a name='pfilePath'></a><div class=' method  js ruby android ios wp8' id='pfilePath'><h3><strong  >filePath</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pfilePath1" data-toggle="tab">Description</a></li><li ><a href="#pfilePath2" data-toggle="tab">Params</a></li><li ><a href="#pfilePath6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-filePath'><div class="tab-pane fade active in" id="pfilePath1">Path to the log file including file name. The path is relative to the platform specific application root or start if from '/' if you wish to store elsewhere ('/mnt/sdcard/myapp.log').   Default file path is "rholog.txt"<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pfilePath2"><p><strong>Default:</strong> rholog.txt</p></div><div class="tab-pane fade" id="pfilePath5"></div><div class="tab-pane fade" id="pfilePath6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.filePath</code> </li><li>Ruby: <code>Rho::Log.filePath</code></li></ul></li></ul></div></div></div>  </div><a name='pfileSize'></a><div class=' method  js ruby android ios wp8' id='pfileSize'><h3><strong  >fileSize</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pfileSize1" data-toggle="tab">Description</a></li><li ><a href="#pfileSize2" data-toggle="tab">Params</a></li><li ><a href="#pfileSize6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-fileSize'><div class="tab-pane fade active in" id="pfileSize1">Maximum log file size in bytes, set 0 to unlimited size; when limit is reached, log wraps to beginning of file. Default value is 50000, it is set in rhoconfig.txt (MaxLogFileSize)<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pfileSize2"><p><strong>Default:</strong> 50000</p></div><div class="tab-pane fade" id="pfileSize5"></div><div class="tab-pane fade" id="pfileSize6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.fileSize</code> </li><li>Ruby: <code>Rho::Log.fileSize</code></li></ul></li></ul></div></div></div>  </div><a name='pincludeCategories'></a><div class=' method  js ruby android ios wp8' id='pincludeCategories'><h3><strong  >includeCategories</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pincludeCategories1" data-toggle="tab">Description</a></li><li ><a href="#pincludeCategories2" data-toggle="tab">Params</a></li><li ><a href="#pincludeCategories6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-includeCategories'><div class="tab-pane fade active in" id="pincludeCategories1">Comma-separated list of included log categories. Set to '*' to log all categories. Set to '' (empty) to filter out all messages. Default value is '*', it is set in rhoconfig.txt (LogCategories).<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pincludeCategories2"><p><strong>Default:</strong> *</p></div><div class="tab-pane fade" id="pincludeCategories5"></div><div class="tab-pane fade" id="pincludeCategories6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.includeCategories</code> </li><li>Ruby: <code>Rho::Log.includeCategories</code></li></ul></li></ul></div></div></div>  </div><a name='plevel'></a><div class=' method  js ruby android ios wp8' id='plevel'><h3><strong  >level</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#plevel1" data-toggle="tab">Description</a></li><li ><a href="#plevel5" data-toggle="tab">Values</a></li><li ><a href="#plevel6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-level'><div class="tab-pane fade active in" id="plevel1">The current logging level. Minimal severity level of messages that will appear in log. When level is set to 0 any messages will be logged. When level is set to 4 only fatal error messages will be logged. Default value is defined in rhoconfig.txt (MinSeverity) <p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="plevel2"></div><div class="tab-pane fade" id="plevel5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>Log.LEVEL_TRACE - (0)</dt><dd>Everything will be logged. Also see settings for controlling log size</dt><dt>Log.LEVEL_INFO - (1)</dt><dd>Information level logs and above will be shown</dt><dt>Log.LEVEL_WARNING - (2)</dt><dd>Warnings and above will only be shown</dt><dt>Log.LEVEL_ERROR - (3)</dt><dd>Error level log messages and above will be shown</dt><dt>Log.LEVEL_FATAL - (4)</dt><dd>Fatala level log messages and above will be shown</dt></dl></div><div class="tab-pane fade" id="plevel6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.level</code> </li><li>Ruby: <code>Rho::Log.level</code></li></ul></li></ul></div></div></div>  </div><a name='pmemoryPeriod'></a><div class=' method  js ruby android ios' id='pmemoryPeriod'><h3><strong  >memoryPeriod</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pmemoryPeriod1" data-toggle="tab">Description</a></li><li ><a href="#pmemoryPeriod2" data-toggle="tab">Params</a></li><li ><a href="#pmemoryPeriod6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-memoryPeriod'><div class="tab-pane fade active in" id="pmemoryPeriod1">Enables the logging of memory usage in the system; specifies the time interval in milliseconds at which memory logs will be generated periodically. Setting it to 0 will disable logging memory information.<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pmemoryPeriod2"><p><strong>Default:</strong> 0</p></div><div class="tab-pane fade" id="pmemoryPeriod5"></div><div class="tab-pane fade" id="pmemoryPeriod6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.memoryPeriod</code> </li><li>Ruby: <code>Rho::Log.memoryPeriod</code></li></ul></li></ul></div></div></div>  </div><a name='pnetTrace'></a><div class=' method  js ruby android ios wp8' id='pnetTrace'><h3><strong  >netTrace</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pnetTrace1" data-toggle="tab">Description</a></li><li ><a href="#pnetTrace2" data-toggle="tab">Params</a></li><li ><a href="#pnetTrace6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-netTrace'><div class="tab-pane fade active in" id="pnetTrace1">Turn on local http server traces. Traces contain infromation about connection process, sent and received headers and data. Please note that this parameter will not take an effect in case of remote server app (and/or shared runtime). Default value can be overridden by the setting in rhoconfig.txt (net_trace) <p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"> </p></div></p></div><div class="tab-pane fade" id="pnetTrace2"><p><strong>Default:</strong> false</p></div><div class="tab-pane fade" id="pnetTrace5"></div><div class="tab-pane fade" id="pnetTrace6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.netTrace</code> </li><li>Ruby: <code>Rho::Log.netTrace</code></li></ul></li></ul></div></div></div>  </div><a name='pskipPost'></a><div class=' method  js ruby android ios wp8' id='pskipPost'><h3><strong  >skipPost</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>BOOLEAN</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pskipPost1" data-toggle="tab">Description</a></li><li ><a href="#pskipPost2" data-toggle="tab">Params</a></li><li ><a href="#pskipPost6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-skipPost'><div class="tab-pane fade active in" id="pskipPost1">Skip http package body from log(for security reasons). Please note that this parameter will not take an effect in case of remote server app (and/or shared runtime), no log will appear in this case. <p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/wp8.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Phone 8, Windows Embedded 8"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"> </p></div></p></div><div class="tab-pane fade" id="pskipPost2"><p><strong>Default:</strong> false</p></div><div class="tab-pane fade" id="pskipPost5"></div><div class="tab-pane fade" id="pskipPost6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-book"></i>Class: This property can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Log.skipPost</code> </li><li>Ruby: <code>Rho::Log.skipPost</code></li></ul></li></ul></div></div></div>  </div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Show log file</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">

                   Show the contents of the log file in a window with controls to refresh, clear and send. Useful for debugging and when asking users to report error messages
               <ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0JS'><pre class='CodeRay'><code>:::javascript

           
Rho.Log.showLog();
                </code></pre></div><div class='tab-pane' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
Rho::Log.showLog
                </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Read log file content</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">

                   Retrieve the contents of the log file as a string
               <ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript

           
//Read at most 16384 symbols
logFileContent = Rho.Log.readLogFile(16384);
                </code></pre></div><div class='tab-pane' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
# Read at most 16384 symbols
logFileContent = Rho::Log.readLogFile 16384
                </code></pre></div></div>  </div></div></div></div><a name='e2'></a><div class=' example' id='e2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample2"><strong>Clean log file</strong></div><div id="cExample2" class="accordion-body">  <div class="accordion-inner">

                   Clear the contents of the log file. In this example, logFileContentBefore will contain the log up until that point, while logFileContentAfter will be empty
               <ul class='nav nav-tabs' id='exI2-S0Tab'><li class='active'><a href='#exI2-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI2-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI2-S0JS'><pre class='CodeRay'><code>:::javascript

           
// Read log file
logFileContentBefore = Rho.Log.readLogFile(16384);

// Clear log file
Rho.Log.cleanLogFile();

// Read log file again - this time it will be empty
logFileContentAfter = Rho.Log.readLogFile(16384);
                </code></pre></div><div class='tab-pane' id='exI2-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
# Read log file
logFileContentBefore = Rho::Log.readLogFile 16384

# Clear log file
Rho::Log.cleanLogFile

# Read log file again - this time it will be empty
logFileContentAfter = Rho::Log.readLogFile(16384
                </code></pre></div></div>  </div></div></div></div><a name='e3'></a><div class=' example' id='e3'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample3"><strong>Logging categories</strong></div><div id="cExample3" class="accordion-body">  <div class="accordion-inner">

                   Categories help you organize your logging messages and find related statements using tools like grep or a text editor's "search" function.
               <ul class='nav nav-tabs' id='exI3-S0Tab'><li class='active'><a href='#exI3-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI3-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI3-S0JS'><pre class='CodeRay'><code>:::javascript

           
Rho.Log.info("Consectetuer adipiscing elit", "Lorem Ipsum");
Rho.Log.info("Foo acquired value Bar in method Baz", "Miscellaneous");

//The above code will result in logging statements like these
Lorem Ipsum| Consectetuer adipiscing elit
Miscellaneous| Foo acquired value Bar in method Baz

                </code></pre></div><div class='tab-pane' id='exI3-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
Rho::Log.info("Consectetuer adipiscing elit", "Lorem Ipsum")
Rho::Log.info("Foo acquired value Bar in method Baz", "Miscellaneous")

#The above code will result in logging statements like these
Lorem Ipsum| Consectetuer adipiscing elit
Miscellaneous| Foo acquired value Bar in method Baz

                </code></pre></div></div>  </div></div></div></div><a name='e4'></a><div class=' example' id='e4'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample4"><strong>Memory Usage</strong></div><div id="cExample4" class="accordion-body">  <div class="accordion-inner">

                   You can ask the system to automatically log memory usage information on a set interval. 
                   This can be used to debug potential memory leaks in operations where a high number of objects are touched in memory. 
               <ul class='nav nav-tabs' id='exI4-S0Tab'><li class='active'><a href='#exI4-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI4-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI4-S0JS'><pre class='CodeRay'><code>:::javascript

           
Rho.Log.memoryPeriod = 1000;
// Perform memory-intensive operations here. Examining the log will tell us if we have a memory leak
// Once our task finishes, disable automatic memory logging
Rho.Log.memoryPeriod = 0;

               </code></pre></div><div class='tab-pane' id='exI4-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
# Request that memory usage be logged automatically by the system every second.
Rho::Log.memoryPeriod = 1000
# Perform memory-intensive operations here. Examining the log will tell us if we have a memory leak
# Once our task finishes, disable automatic memory logging
Rho::Log.memoryPeriod = 0
                </code></pre></div></div>  </div></div></div></div></div>